test/test_suite/errors/try_known_optional.c3t
// #target: macos-x64
module test;
import std;
fn int main()
{
	if (try x = (true ? io::EOF? : 3))
	{}
	return 0;
}

/* #expect: test.ll

entry:
  %x = alloca i32, align 4
  store i32 0, ptr %x, align 4
  br label %catch_landing

catch_landing:                                    ; preds = %entry
  ret i32 0
}
